--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ install:
   - cmd: cd C:\projects
   - cmd: git clone https://github.com/phillyfan1138/FunctionalUtilities
   - cmd: git clone https://github.com/phillyfan1138/FangOost
+  - cmd: git clone https://github.com/phillyfan1138/Vasicek
   - cmd: git clone https://github.com/miloyip/rapidjson
   - cmd: cd credit
   - cmd: make
