--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - cd ..
   - git clone https://github.com/phillyfan1138/FunctionalUtilities
   - git clone https://github.com/phillyfan1138/FangOost
+  - git clone https://github.com/phillyfan1138/Vasicek
   - git clone https://github.com/miloyip/rapidjson
   - cd creditRisk
 script:
